--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/soleil.pngs" type="image/x-icon" />
     <link rel=stylesheet href=css/style.css>
     <title>Météo</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Weather App</h1>
-        <input type="text" id="locationInput" placeholder="Enter a city">
-        <button id="searchButton">Search</button>
+        <h1>Météo</h1>
+        <input type="text" id="locationInput" placeholder="Entez une ville">
+        <button id="searchButton">Rechercher</button>
         <div class="weather-info">
             <h2 id="location"></h2>
             <p id="temperature"></p>
